# db_comparator

./: .pylintrc  ComparingStrategy  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  headless.py  improvments_and_bugs.md  main_file.py  pyproject.toml  pytest_helper.py  requirements.txt
.github/workflows/: mypy.yml  old_pylint.yml  poetry.yml  pylint.yml  pytest.yml
configuration/: Directories.py  advanced_ui_config.py  checks_customization_config.py  default_variables.py  directories.py  main_config.py  sql_variables.py  system_config.py  ui_config.py  variables.py
custom_ui_elements/: advanced_settings.py  clickable_item_view.py  clickable_items_view.py  clickable_items_view_columns.py  clickable_items_view_exclude.py  clickable_lineedit.py  progress_window.py  radiobutton_items_view.py
deprecated/: checkboxes.py  process_dates.py  process_uniqs.py  query_constructor.py  query_list_iterator.py  sql_helper.py  table_data.py  unified_comparing_class.py
helpers/: converters.py  df_compare_helper.py  helper.py  mail_helper.py  sql_helper.py
logic/: start_comparing.py
resources/: sql_comparator_backlog.txt
resources/properties/: integration_tests  jsontest  reserve  speedup.properties  speedup.property  sql_comparator.properties
tests/: fullfill_sql_data.sql  test_config_serialization.py  test_element_position.py  test_table_calculation.py
tests/integration/: integration_test.sh
tests/resources/sql/: cleanup_test_data.sql
ui_elements/: advanced_buttons.py  advanced_combo_boxes.py  advanced_elements_position.py  advanced_labels.py  advanced_line_edits.py  buttons.py  checkboxes.py  elements_position.py  labels.py  line_edits.py  menu.py  radiobuttons.py
ui_logic/: advanced_window_logic.py  buttons.py  checkboxes.py  common.py  config_serialization.py  line_edits.py  table_calculation.py
