[tool.poetry]
name = "dbcomparator"
version = "0.1.0"
description = "Application is designed to compare relational databases"
authors = ["Pavel Kiselev <pal_andreich@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymysql = "^1.0.2"
pyqt5 = "^5.15.7"
sqlalchemy = "^1.4.46"
pandas = "^1.5.3"
pylint = "^2.15.10"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
pytest = "^7.2.1"
mypy = "^1.0.0"
radon = "^5.1.0"
pre-commit = "^3.1.1"
types-pymysql = "^1.0.19.5"
sqlalchemy = {version = "1.4.46", extras = ["mypy"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
