[project]
name = "dbcomparator"
version = "0.1.0"
description = "Application is designed to compare relational databases"
readme = {file = "README.md", content-type = "text/markdown"}
maintainers = [
    {name = "Pavel Kiselev", email = "pal_andreich@mail.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "pymysql (==1.1.1)",
    "pyqt5 (==5.15.11)",
    "sqlalchemy(==2.0.42)",
    "pandas (==2.3.1)",
    "pylint (==3.3.7)",
    "jinja2 (==3.1.6)",
    "cryptography (==45.0.6)",
    # optional below
    "pylint (==3.3.7)",
    "pytest (==7.2.1)",
    "mypy (==1.0.0)",
    "radon (==5.1.0)",
    "pre-commit (==3.1.1)",
    "types-pymysql (==1.0.19.5)",
    "sqlalchemy (==2.0.42)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
